          different, we'll do a pull and run the test suite
        - added auto_sleep option to the config file for [Dispatch]. This is how
          long in seconds we sleep in between runs and run checks for --auto
        - added status() in Git, checks whether the current repo is ahead or
          behind in commits compared to remote

2.13    2017-03-28
        - *NOTE* this release has been tested on win7 with berrybrew v1.10, but
          on win10, there may be issues. This is due to an internal library in
          that project that is questionable on win10 (Ionic.Zip). This is being
          investigated, and an update is planned. I wouldn't recommend trusting
          this distribution on Windows 10 at this time for that reason. The
          problem stems from the fact that the portable Strawberry Perl that
          is being installed is not always extracted fully, despite the fact the
          download is ok, and the checksum checks out. Extraction via Explorer
          performs correctly. Again, don't trust on win10
        - several various POD corrections/updates
        - fix issue where info_cache() wasn't being updated after instance
          removal (fixes #167)
        - added build prereq of Archive::Zip to prevent certain tests from
          failing when it isn't installed
        - fix bug in BCMD::using() in the Windows regex check. Was missing a \s+
        - fix issue in BCMD::info_cache(). A regex was incorrect. It worked on
          Unix just due to sheer luck
        - added additional argument checking in the command string to Tester
          (closes #144)

2.12    2017-03-27
        - extended default install timeout to 600 seconds
        - fix erroneous uninitialized warning in Dispatch if a repo isn't sent
          in, and one isn't found with Git in the cwd. (fixes #165)
        - clarify what course of action to take if no testers can be found
          when bbdispatch is run (fixes #164)