@@ -11,7 +11,7 @@ my %args;
 my $help;
 
 GetOptions(
-    "auto"       => \$args{auto},
+    "auto=i"     => \$args{auto},
     "cmd=s"      => \$args{cmd},
     "testers=s@" => \$args{testers},
     "repo=s"     => \$args{repo},
@@ -35,7 +35,7 @@ my $dispatcher = Test::BrewBuild::Dispatch->new(
     forks => $args{forks},
 );
 
-if ($args{auto}){
+if (defined $args{auto}){
     $dispatcher->auto(%args);
     exit();
 }
@@ -67,7 +67,11 @@ Have the remote testers test a specified repository:
 
 Run in automated continuous mode. Reruns all tests continuously in a loop:
 
-    bbdispatch [...] -a
+    bbdispatch [...] -a 0
+
+Automated continuous mode, but run only 10 runs:
+
+    bbdispatch [...] -a 10
 
 Add debugging to any other command string:
 
